--- a/templates/actors/parts/combat/character-combat-item.hbs
+++ b/templates/actors/parts/combat/character-combat-item.hbs
@@ -8,9 +8,10 @@
         <div class="item-detail">
             {{#if data.properties.ranged}}{{data.range}}{{/if}}
         </div>
+        {{log 'properties.2H' data.properties.2H}}
         <div class="item-detail">
             {{#if (equals data.slot "hand")}}
-                {{#if (equals data.hands 2)}}
+                {{#if data.properties.2H}}
                     <i class="fas fa-hand-paper"></i><i class="fas fa-hand-paper"></i>
                 {{else}}
                     <i class="fas fa-hand-paper"></i>
