--- a/templates/chat/dmg-roll-card.hbs
+++ b/templates/chat/dmg-roll-card.hbs
@@ -8,8 +8,8 @@
         <h3><strong>{{label}}</strong></h3>
     </div>
     <div class="flex1 right no-wrap">
-        <label for="dr">{{localize "COC.ui.dr.abbrev"}}</label>
-        <input type="checkbox" id="dr" name="dr">            
+        <label for="dr" class="dr-checkbox">{{localize "COC.ui.dr.abbrev"}}</label>
+        <input type="checkbox" id="dr" name="dr" class="dr-checkbox">            
         <a class="btn apply-dmg" data-apply="full">
             <i class="fas fa-user-minus" title="{{localize "COC.ui.applyDamage"}}"></i>
         </a>
