Correction affichage des tabs

--- a/css/coc.css
+++ b/css/coc.css
@@ -1074,6 +1074,7 @@
   color: #464331c4;
   text-align: center;
   border: none;
+  justify-content: center;
 }
 .coc.base nav.sheet-navigation.tabs .item {
   text-overflow: ellipsis;
@@ -1086,6 +1087,7 @@
   height: 28px;
   box-shadow: 0 0 10px #00000052 inset;
   background: #AAA;
+  width: 16.66%;
 }
 .coc.base nav.sheet-navigation.tabs .item:hover {
   color: #464331c4;
