--- a/styles/components/base/tabs.less
+++ b/styles/components/base/tabs.less
@@ -6,6 +6,7 @@ nav.sheet-navigation {
     color: @c-darkbrown;
     text-align: center;
     border: none;
+    justify-content: center;
 
     .item {
       .ellipsis();
@@ -16,6 +17,7 @@ nav.sheet-navigation {
       height: 28px;
       box-shadow: 0 0 10px @c-shadow inset;
       background:#AAA;
+      width: 16.66%;
       &:hover {
         color: @c-darkbrown;
         background:#CCC;
