Correction bug sur ouverture des compendiums
Ouverture impossible avec une fiche de PJ ouverte

--- a/templates/items/parts/details/path-details.hbs
+++ b/templates/items/parts/details/path-details.hbs
@@ -18,7 +18,7 @@
         <div class="item-detail"></div>
         <div class="item-detail item-rank">Rang</div>
         <div class="item-controls">
-            <a class="item-control item-create compendium-pack" data-pack="coc.capacities" data-open="0" title="Ajouter une capacité"><i class="fas fa-plus"></i>&nbsp; Add</a>
+            <a class="item-control item-create coc-compendium-pack" data-pack="coc.capacities" data-open="0" title="Ajouter une capacité"><i class="fas fa-plus"></i>&nbsp; Add</a>
         </div>
     </li>
     {{#each data.capacities as |capacity id|}}
