--- a/templates/actors/parts/actor-tabs.hbs
+++ b/templates/actors/parts/actor-tabs.hbs
@@ -5,8 +5,8 @@
     {{/if}}
     <a class="item" data-tab="combat">{{localize "COC.tabs.combat"}}</a>
     {{#if (isNotLimited @root)}}
-        <a class="item compendium-pack" data-pack="coc.items" data-open="0" data-tab="inventory" title="clic droit pour ouvrir le compendium"><i class="fas fa-atlas"></i>&nbsp;&nbsp;{{localize "COC.tabs.inventory"}}</a>
-        <a class="item compendium-pack" data-pack="coc.capacities" data-open="0" data-alternative-pack="coc.paths" data-alternative-open="0" data-tab="capacities" title="clic droit pour ouvrir les capacités, SHIFT + clic droit pour ouvrir les voies"><i class="fas fa-atlas"></i>&nbsp;&nbsp;{{localize "COC.tabs.capacities"}}</a>
+        <a class="item coc-compendium-pack" data-pack="coc.items" data-open="0" data-tab="inventory" title="clic droit pour ouvrir le compendium"><i class="fas fa-atlas"></i>&nbsp;&nbsp;{{localize "COC.tabs.inventory"}}</a>
+        <a class="item coc-compendium-pack" data-pack="coc.capacities" data-open="0" data-alternative-pack="coc.paths" data-alternative-open="0" data-tab="capacities" title="clic droit pour ouvrir les capacités, SHIFT + clic droit pour ouvrir les voies"><i class="fas fa-atlas"></i>&nbsp;&nbsp;{{localize "COC.tabs.capacities"}}</a>
         <a class="item" data-tab="effects">{{ localize "COC.tabs.effects" }}</a>
     {{/if}}
     <a class="item" data-tab="description">{{localize "COC.tabs.description"}}</a>    
