--- a/templates/actors/parts/inventory/actor-inventory.hbs
+++ b/templates/actors/parts/inventory/actor-inventory.hbs
@@ -9,7 +9,7 @@
                     {{#if (or (equals ../actor.type "character") (equals ../actor.type "npc"))}}<div class="item-detail">Action</div>{{/if}}
                     {{#if @root.editable}}
                         <div class="item-controls">
-                            <a class="item-control item-create compendium-pack" data-pack="coc.items" data-open="0" title="Ajouter un objet"><i class="fas fa-plus"></i>&nbsp; {{localize "COC.ui.add"}}</a>
+                            <a class="item-control item-create coc-compendium-pack" data-pack="coc.items" data-open="0" title="Ajouter un objet"><i class="fas fa-plus"></i>&nbsp; {{localize "COC.ui.add"}}</a>
                         </div>
                     {{/if}}
                 </li>
