--- a/templates/items/parts/details/profile-details.hbs
+++ b/templates/items/parts/details/profile-details.hbs
@@ -87,7 +87,7 @@
     <li class="inventory-header flexrow">
         <h3 class="item-name flexrow">Voies</h3>
         <div class="item-controls">
-            <a class="item-control item-create compendium-pack" data-pack="coc.paths" data-open="0" title="Ajouter une voie"><i class="fas fa-plus"></i>&nbsp; Add</a>
+            <a class="item-control item-create coc-compendium-pack" data-pack="coc.paths" data-open="0" title="Ajouter une voie"><i class="fas fa-plus"></i>&nbsp; Add</a>
         </div>
     </li>
 {{#each data.paths}}
