--- a/templates/actors/parts/capacities/actor-capacities.hbs
+++ b/templates/actors/parts/capacities/actor-capacities.hbs
@@ -11,7 +11,7 @@
                     <div class="item-detail">S</div>
                     {{#if @root.editable}}
                         <div class="item-controls">
-                            <a class="item-control item-create coc-coc-compendium-pack" data-pack="capacities" data-open="0" title="Ajouter une capacité"><i class="fas fa-plus"></i>&nbsp; Aj.</a>
+                            <a class="item-control item-create coc-compendium-pack" data-pack="capacities" data-open="0" title="Ajouter une capacité"><i class="fas fa-plus"></i>&nbsp; Aj.</a>
                         </div>
                     {{/if}}
                 </li>
