--- a/templates/dialogs/roll-weapon-dialog.hbs
+++ b/templates/dialogs/roll-weapon-dialog.hbs
@@ -50,12 +50,22 @@
         <input class="field-value" id="malus" name="malus" type="text" value="{{numberFormat malus decimals=0 sign=true}}" data-dtype="Number"/>
     </div>
 </div>
-<hr/>
-{{#if (isEnabled "displayDifficulty")}}
+
 <!-- DIFFICULTY -->
-<div class="row flexrow" style="margin-bottom: 5px;">
-    <div class="flex1 center bg-darkslate">
-        <span class="field-label">{{localize 'COC.ui.difficulty'}}</span>
+{{#if displayDifficulty}}
+    <hr/>    
+    <div class="row flexrow" style="margin-bottom: 5px;">
+        <div class="flex1 center bg-darkslate">
+            <span class="field-label">{{localize 'COC.ui.difficulty'}}</span>
+        </div>
+        <div class="flex1 center cell">
+            <input class="field-value" id="difficulty" name="difficulty" type="text" value="{{difficulty}}" data-dtype="Number"/>
+        </div>
+    </div> 
+{{else}}
+    <div class="row flexrow" style="margin-bottom: 5px; display:none;">
+        <div class="flex1 center bg-darkslate">
+            <span class="field-label">{{localize 'COC.ui.difficulty'}}</span>
     </div>
     <div class="flex1 center cell">
         <input class="field-value" id="difficulty" name="difficulty" type="text" value="{{difficulty}}" data-dtype="Number"/>
