--- a/templates/dialogs/skillroll-dialog.hbs
+++ b/templates/dialogs/skillroll-dialog.hbs
@@ -50,14 +50,14 @@
         <input class="field-value" id="malus" name="malus" type="text" value="{{numberFormat malus decimals=0 sign=true}}" data-dtype="Number"/>
     </div>
 </div>
-{{#if (isEnabled "displayDifficulty")}}
+{{#if displayDifficulty}}
     <hr/>
     <div class="row flexrow" style="margin-bottom: 5px;">
         <div class="flex1 center bg-darkslate">
             <span class="field-label">{{localize 'COC.ui.difficulty'}}</span>
         </div>
         <div class="flex1 center cell">
-            <input class="field-value" id="difficulty" name="difficulty" type="text" value="" data-dtype="Number"/>
+            <input class="field-value" id="difficulty" name="difficulty" type="text" value="{{difficulty}}" data-dtype="Number"/>
         </div>
     </div>
 {{/if}}
