--- a/templates/items/parts/details/profile-details.hbs
+++ b/templates/items/parts/details/profile-details.hbs
@@ -69,9 +69,9 @@
     </div>
 </div>
 <div class="form-group">
-    <label>{{localize "COC.attributes.fp.label"}}</label>
+    <label>{{getFpLabel}}</label>
     <div class="form-fields">
-        <input class="field-value" name="data.bonuses.fp" type="text" value="{{numberFormat data.bonuses.fp decimals=0 sign=true}}" placeholder="{{localize "COC.attributes.fp.label"}}" data-dtype="Number">
+        <input class="field-value" name="data.bonuses.fp" type="text" value="{{numberFormat data.bonuses.fp decimals=0 sign=true}}" placeholder="{{getFpLabel}}" data-dtype="Number">
     </div>
 </div>
 <div class="form-group">
