Correction de l'affichage de la difficulté dans le chat

--- a/templates/chat/skill-roll-card.hbs
+++ b/templates/chat/skill-roll-card.hbs
@@ -14,7 +14,7 @@
             <h2 class="failure"><i class="fas fa-times"></i>&nbsp;{{localize "COC.roll.failure"}}...</h2>
         {{/if}}
     {{/if}}
-    <h3><strong>{{label}}</strong> {{localize "COC.ui.difficulty"}} <strong>{{difficulty}}</strong></h3>
+    <h3><strong>{{label}}</strong><label class="display-difficulty">&nbsp;{{localize "COC.ui.difficulty"}}</label> <strong class="display-difficulty">{{difficulty}}</strong></h3>
 {{else}}
     {{#if isCritical}}
         <h2 class="standard critical"><i class="fas fa-check-double"></i>&nbsp;{{localize "COC.roll.critical"}}...</h2>
