--- a/templates/items/parts/details/profile-details.hbs
+++ b/templates/items/parts/details/profile-details.hbs
@@ -98,8 +98,8 @@
                 <h4>{{name}}</h4>
             </div>
             <div class="item-controls">
-                <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
-                <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+                <a class="item-control item-edit" title='{{localize "COC.ui.editItem"}}'><i class="fas fa-edit"></i></a>
+                <a class="item-control item-delete" title='{{localize "COC.ui.deleteItem"}}'><i class="fas fa-trash"></i></a>
             </div>
         </li>
     </ol>
