--- a/css/coc.css
+++ b/css/coc.css
@@ -528,13 +528,46 @@
   margin: 0;
   padding: 0;
 }
-.inventory-list .item-controls {
+.inventory-list .item-controls-header {
   flex: 0 0 44px;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: flex-start;
   justify-content: flex-end;
+  margin-right: 10px;
+}
+.inventory-list .item-controls-header > * {
+  flex: 1;
+}
+.inventory-list .item-controls-header .flex1 {
+  flex: 1;
+}
+.inventory-list .item-controls-header .flex2 {
+  flex: 2;
+}
+.inventory-list .item-controls-header .flex3 {
+  flex: 3;
+}
+.inventory-list .item-controls-header .flex4 {
+  flex: 4;
+}
+.inventory-list .item-controls-header a {
+  flex: 0 0 22px;
+  font-size: 12px;
+  text-align: center;
+  color: #7a7971;
+}
+.inventory-list .item-controls {
+  flex: 0 0 44px;
+  /*display: flex;*/
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  justify-content: flex-end;
+  margin-left: 5px;
+  margin-right: 5px;
+  flex-wrap: nowrap;
 }
 .inventory-list .item-controls > * {
   flex: 1;
@@ -1222,10 +1255,4 @@
 }
 .coc input::placeholder {
   color: lightgray;
-}
-
-.btn.apply-dmg i {
-  font-size: 16px;
-  padding-left: 2px;
-  padding-right: 2px;
 }
