--- a/templates/actors/parts/capacities/encounter-capacities.hbs
+++ b/templates/actors/parts/capacities/encounter-capacities.hbs
@@ -22,8 +22,8 @@
                         <div class="item-detail">{{#if system.limited}}L{{/if}}</div>
                         <div class="item-detail">{{#if system.spell}}&#10033;{{/if}}</div>
                         <div class="item-controls">
-                            <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
-                            <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+                            <a class="item-control item-edit" title='{{localize "COC.ui.editItem"}}'><i class="fas fa-edit"></i></a>
+                            <a class="item-control item-delete" title='{{localize "COC.ui.deleteItem"}}'><i class="fas fa-trash"></i></a>
                         </div>
                         <div class="item-summary" style="display: none">
                             {{{system.description}}}
