--- a/templates/actors/parts/combat/encounter-combat.hbs
+++ b/templates/actors/parts/combat/encounter-combat.hbs
@@ -25,10 +25,10 @@
                     <div class="item-detail weapon-mod">{{numberFormat modTotal decimals=0 sign=true}}</div>
                     <div class="item-detail weapon-dmg">{{dmgTotal}}</div>
                     <div class="item-controls-3">
-                        <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
+                        <a class="item-control item-edit" title='{{localize "COC.ui.editItem"}}'><i class="fas fa-edit"></i></a>
                         <a class="item-control rollable" data-roll-type="encounter-weapon"><i class="fas fa-dice-d20"></i></a>
                         <a class="item-control rollable" data-roll-type="encounter-damage"><i class="fas fa-dice"></i></a>
-                        <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+                        <a class="item-control item-delete" title='{{localize "COC.ui.deleteItem"}}'><i class="fas fa-trash"></i></a>
                     </div>
                 {{/with}}
                 <div class="item-summary" style="display: none">
