--- a/templates/effects/effects-item.hbs
+++ b/templates/effects/effects-item.hbs
@@ -18,8 +18,8 @@
         {{/if}}
         </div>
         <div class="item-controls">
-            <a class="item-control effect-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
-            <a class="item-control effect-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+            <a class="item-control effect-edit" title='{{localize "COC.ui.editItem"}}'><i class="fas fa-edit"></i></a>
+            <a class="item-control effect-delete" title='{{localize "COC.ui.deleteItem"}}'><i class="fas fa-trash"></i></a>
         </div>
     {{/if}}
 </li>
