--- a/templates/actors/parts/inventory/actor-inventory.hbs
+++ b/templates/actors/parts/inventory/actor-inventory.hbs
@@ -4,6 +4,12 @@
             <ol class="inventory-list foldable {{#if (includes ../folded.inventory category.id)}}folded{{/if}}" data-tab="inventory" data-category="{{category.id}}">
                 <li class="inventory-header flexrow">
                     <h3 class="item-name flexrow">{{localize category.label}}</h3>
+                    {{#if (isCategoryIn category.id "armor" "shield" "spell")}}<div class="item-detail">Def</div>{{else}}<div class="item-detail"></div>{{/if}}
+                    {{#if (isCategoryIn category.id "ranged" "spell")}}<div class="item-detail">Portée</div>{{else}}<div class="item-detail"></div>{{/if}}
+                    {{#if (isCategoryIn category.id "melee" "ranged" "shield")}}<div class="item-detail">Usage</div>{{else}}<div class="item-detail"></div>{{/if}}
+                    {{#if (isCategoryIn category.id "melee" "ranged" "spell")}}<div class="item-detail">Critique</div>{{else}}<div class="item-detail"></div>{{/if}}
+                    {{#if (isCategoryIn category.id "melee" "ranged" "spell")}}<div class="item-detail">Mod</div>{{else}}<div class="item-detail"></div>{{/if}}
+                    {{#if (isCategoryIn category.id "melee" "ranged" "spell")}}<div class="item-detail">DM</div>{{else}}<div class="item-detail"></div>{{/if}}                    
                     <div class="item-detail">{{localize "COC.ui.qty"}}</div>
                     <div class="item-detail"><i title="Prix" class="fas fa-coins" style="color:silver"></i></div>
                     {{#if (or (equals ../actor.type "character") (equals ../actor.type "npc"))}}<div class="item-detail">Action</div>{{/if}}
