:bug: Mise en forme des tableaux Inventaire et Capacités

--- a/templates/actors/parts/inventory/actor-inventory-item.hbs
+++ b/templates/actors/parts/inventory/actor-inventory-item.hbs
@@ -42,7 +42,7 @@
     </div>
     {{/if}}
     {{#if @root.editable}}
-        <div class="item-controls">
+        <div class="item-controls-3">
             <a class="item-control item-to-chat" title='{{localize "COC.ui.sendItemToChat"}}'><i class="fas fa-comments"></i></a>
             <a class="item-control item-edit" title='{{localize "COC.ui.editItem"}}'><i class="fas fa-edit"></i></a>
             <a class="item-control item-delete" title='{{localize "COC.ui.deleteItem"}}'><i class="fas fa-trash"></i></a>
