--- a/css/coc.css
+++ b/css/coc.css
@@ -394,6 +394,9 @@
 .no-wrap {
   flex-wrap: nowrap !important;
 }
+h3 {
+  border-bottom: none;
+}
 .inventory-list {
   list-style: none;
   margin: 0;
@@ -560,7 +563,7 @@
 }
 .inventory-list .item-controls {
   flex: 0 0 44px;
-  /*display: flex;*/
+  display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: flex-start;
@@ -598,23 +601,11 @@
   border-top: 1px solid #c9c7b8;
 }
 .inventory-list .item-controls-3 {
-  -webkit-box-flex: 0;
-  -ms-flex: 0 0 88px;
-  flex: 0 0 88px;
-  display: -webkit-box;
-  display: -ms-flexbox;
+  flex: 0 0 66px;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: row;
   flex-direction: row;
-  -ms-flex-wrap: wrap;
   flex-wrap: wrap;
-  -webkit-box-pack: start;
-  -ms-flex-pack: start;
   justify-content: flex-start;
-  -webkit-box-pack: end;
-  -ms-flex-pack: end;
   justify-content: flex-end;
 }
 .inventory-list .item-controls-3 > * {
