--- a/templates/actors/parts/capacities/actor-capacities.hbs
+++ b/templates/actors/parts/capacities/actor-capacities.hbs
@@ -10,8 +10,8 @@
                     <div class="item-detail">L</div>
                     <div class="item-detail">S</div>
                     {{#if @root.editable}}
-                        <div class="item-controls">
-                            <a class="item-control item-create coc-compendium-pack" data-pack="capacities" data-open="0" title="Ajouter une capacité"><i class="fas fa-plus"></i>&nbsp; Aj.</a>
+                        <div class="item-controls-3">
+                            <a class="item-control item-create coc-compendium-pack" data-pack="capacities" data-open="0" title="Ajouter une capacité"><i class="fas fa-plus"></i>&nbsp; {{localize "COF.ui.add"}}</a>
                         </div>
                     {{/if}}
                 </li>
@@ -26,7 +26,7 @@
                             <div class="item-detail">{{#if capacity.system.limited}}L{{/if}}</div>
                             <div class="item-detail">{{#if capacity.system.spell}}&#10033;{{/if}}</div>
                             {{#if @root.editable}}
-                                <div class="item-controls">
+                                <div class="item-controls-3">
                                     <a class="item-control item-to-chat" title='{{localize "COC.ui.sendItemToChat"}}'><i class="fas fa-comments"></i></a>
                                     <a class="item-control item-edit" title='{{localize "COC.ui.editItem"}}'><i class="fas fa-edit"></i></a>
                                     <a class="item-control item-delete" title='{{localize "COC.ui.deleteItem"}}'><i class="fas fa-trash"></i></a>
