--- a/templates/actors/parts/inventory/actor-inventory.hbs
+++ b/templates/actors/parts/inventory/actor-inventory.hbs
@@ -14,7 +14,7 @@
                     <div class="item-detail"><i title="Prix" class="fas fa-coins" style="color:silver"></i></div>
                     {{#if (or (equals ../actor.type "character") (equals ../actor.type "npc"))}}<div class="item-detail">Action</div>{{/if}}
                     {{#if @root.editable}}
-                        <div class="item-controls">
+                        <div class="item-controls-3">
                             <a class="item-control item-create coc-compendium-pack" data-pack="coc.items" data-open="0" title="Ajouter un objet"><i class="fas fa-plus"></i>&nbsp; {{localize "COC.ui.add"}}</a>
                         </div>
                     {{/if}}
