--- a/templates/actors/parts/actor-description.hbs
+++ b/templates/actors/parts/actor-description.hbs
@@ -4,4 +4,4 @@
     </div>
 </div>
 <hr/>
-{{editor system.description target="system.description" button=true owner=owner editable=editable}}
+{{editor enrichedDescription target="system.description" button=true owner=owner editable=editable}}
