--- a/templates/items/item-sheet.hbs
+++ b/templates/items/item-sheet.hbs
@@ -27,7 +27,7 @@
     <section class="sheet-body">
         <div class="tab flexrow active no-wrap" data-group="primary" data-tab="description">
             {{> "systems/coc/templates/items/parts/properties/item-properties.hbs"}}
-            {{editor system.description target="system.description" button=true owner=owner editable=editable}}
+            {{editor enrichedDescription target="system.description" button=true owner=owner editable=editable}}
         </div>
         {{#if (isNotLimited @root)}}
             <div class="tab details" data-group="primary" data-tab="details">
