--- a/css/coc.css
+++ b/css/coc.css
@@ -1247,3 +1247,7 @@ h3 {
 .coc input::placeholder {
   color: lightgray;
 }
+
+img[data-status-id="dead"],img[data-status-id="prone"],img[data-status-id="blind"],img[data-status-id="stun"],img[data-status-id="downgrade"],img[data-status-id="restrain"] {
+  background-color: green;
+}
