--- a/templates/items/parts/details/setting-details.hbs
+++ b/templates/items/parts/details/setting-details.hbs
@@ -2,16 +2,7 @@
     <label>Setting</label>
     <div class="form-fields">
         <select name="system.setting" data-type="String" style="width:100%">
-            {{#select system.setting}}
-                <option value="">{{localize "COC.None"}}</option>
-                <option value="base">{{localize "COC.setting.base"}}</option>
-                <option value="epouvante">{{localize "COC.setting.epouvante"}}</option>
-                <option value="pulp">{{localize "COC.setting.pulp"}}</option>
-                <option value="zombis">{{localize "COC.setting.zombis"}}</option>
-                <option value="espionnage">{{localize "COC.setting.espionnage"}}</option>
-                <option value="surhumains">{{localize "COC.setting.surhumains"}}</option>
-                <option value="cyberpunk">{{localize "COC.setting.cyberpunk"}}</option>
-            {{/select}}
-        </select>
+            {{selectOptions config.SETTING selected=system.setting localize=true}}
+        </select> 
     </div>
 </div>
