--- a/templates/actors/parts/details/encounter-details.hbs
+++ b/templates/actors/parts/details/encounter-details.hbs
@@ -28,18 +28,9 @@
                 <span class="field-label">{{ localize 'COC.details.size' }}</span>
             </div>
             <div class="flex2 center cell">
-                <select name="system.details.size" data-type="String" style="width:100%">
-                    {{#select system.details.size}}
-                        <option value="">{{localize "COC.None"}}</option>
-                        <option value="tiny">Minuscule</option>
-                        <option value="small">Très petite</option>
-                        <option value="short">Petite</option>
-                        <option value="med">Moyenne</option>
-                        <option value="big">Grande</option>
-                        <option value="huge">Énorme</option>
-                        <option value="colossal">Colossale</option>
-                    {{/select}}
-                </select>
+             <select name="system.details.size" data-type="String" style="width:100%">
+                    {{selectOptions config.actorSizes selected=system.details.size localize=true}}
+                </select>                
             </div>
         </div>
         <!-- /SIZE -->
@@ -53,13 +44,7 @@
                 </div>
                 <div class="flex2 center cell">
                     <select name="system.archetype" data-type="String" style="width:100%">
-                        {{#select system.archetype}}
-                            <option value="">{{localize "COC.None"}}</option>
-                            <option value="standard">Standard</option>
-                            <option value="rapide">Rapide</option>
-                            <option value="puissant">Puissant</option>
-                            <option value="inférieur">Inférieur</option>
-                        {{/select}}
+                        {{selectOptions config.encounterArchetypes selected=system.archetype localize=true blank="COC.None"}}
                     </select>
                 </div>
             </div>
@@ -71,14 +56,8 @@
                 </div>
                 <div class="flex2 center cell">
                     <select name="system.category" data-type="String" style="width:100%">
-                        {{#select system.category}}
-                            <option value="">{{localize "COC.None"}}</option>
-                            <option value="vivante">Vivante</option>
-                            <option value="humanoïde">Humanoïde</option>
-                            <option value="non-vivante">Non-vivante</option>
-                        {{/select}}
+                        {{selectOptions config.encounterCategories selected=system.category localize=true blank="COC.None"}}
                     </select>
-
                 </div>
             </div>
             <!-- /CATEGORY -->
@@ -88,14 +67,8 @@
                     <span class="field-label">{{ localize 'COC.ui.boss' }}</span>
                 </div>
                 <div class="flex2 center cell">
-                    <select name="system.boss.rank" data-type="String" style="width:100%">
-                        {{#select system.boss.rank}}
-                            <option value="">{{localize "COC.None"}}</option>
-                            <option value="1">Endurci</option>
-                            <option value="2">Expert</option>
-                            <option value="3">Elite</option>
-                            <option value="4">Légendaire</option>
-                        {{/select}}
+                  <select name="system.boss.rank" data-type="String" style="width:100%">
+                        {{selectOptions config.encounterBossRanks selected=system.boss.rank localize=true blank="COC.None"}}
                     </select>
                 </div>
             </div>
