--- a/templates/actors/parts/stats/actor-attacks.hbs
+++ b/templates/actors/parts/stats/actor-attacks.hbs
@@ -48,13 +48,8 @@
         <div class="field-label ellipsis">{{ localize "COC.ui.sc" }}</div>
     </div>
     <div class="flex1 cell center">
-        <select class="field-value" name="system.attacks.magic.stat" data-type="String" style="width:100%">
-            {{#select system.attacks.magic.stat}}
-                <option value="">{{localize "COC.None"}}</option>
-                <option value="@stats.int.mod">{{localize "COC.stats.int.abbrev"}}</option>
-                <option value="@stats.wis.mod">{{localize "COC.stats.wis.abbrev"}}</option>
-                <option value="@stats.cha.mod">{{localize "COC.stats.cha.abbrev"}}</option>
-            {{/select}}
+        <select name="system.attacks.magic.stat" data-type="String" style="width:100%">
+            {{selectOptions config.SPELLCASTING selected=system.attacks.magic.stat localize=true blank="COC.None"}}
         </select>
     </div>
     <div class="flex1 center">
