--- a/templates/items/parts/details/effects-details.hbs
+++ b/templates/items/parts/details/effects-details.hbs
@@ -1,50 +1,51 @@
 <h3 class="form-header">Effets</h3>
 <div class="form-group">
-    <label>{{localize "COC.ui.properties"}}</label>
-    <div class="form-fields">
-        <label class="checkbox"> <input type="checkbox" name="system.properties.heal" {{checked system.properties.heal}}> {{localize "COC.properties.heal"}}</label>
-        <label class="checkbox"> <input type="checkbox" name="system.properties.buff" {{checked system.properties.buff}}> {{localize "COC.properties.buff"}}</label>
-        <label class="checkbox"> <input type="checkbox" name="system.properties.temporary" {{checked system.properties.temporary}}> {{localize "COC.properties.temporary"}}</label>
-        <label class="checkbox"> <input type="checkbox" name="system.properties.persistent" {{checked system.properties.persistent}}> {{localize "COC.properties.persistent"}}</label>
-        <label class="checkbox"><input type="checkbox" name="system.properties.spell" {{checked system.properties.spell}}> {{localize "COC.properties.spell"}}</label>
-    </div>
+  <label>{{localize "COC.ui.properties"}}</label>
+  <div class="form-fields">
+    <label class="checkbox"> <input type="checkbox" name="system.properties.heal" {{checked system.properties.heal}} /> {{localize "COC.properties.heal"}}</label>
+    <label class="checkbox"> <input type="checkbox" name="system.properties.buff" {{checked system.properties.buff}} /> {{localize "COC.properties.buff"}}</label>
+    <label class="checkbox"> <input type="checkbox" name="system.properties.temporary" {{checked system.properties.temporary}} /> {{localize "COC.properties.temporary"}}</label>
+    <label class="checkbox"> <input type="checkbox" name="system.properties.persistent" {{checked system.properties.persistent}} /> {{localize "COC.properties.persistent"}}</label>
+    <label class="checkbox"><input type="checkbox" name="system.properties.spell" {{checked system.properties.spell}} /> {{localize "COC.properties.spell"}}</label>
+  </div>
 </div>
 
 {{#if system.properties.heal}}
-    <div class="form-group">
-        <label>{{ localize "COC.ui.heal" }}</label>
-        <div class="form-fields">
-            <input type="text" name="system.effects.heal.formula" value="{{system.effects.heal.formula}}" placeholder="{{localize "COC.ui.formula"}}" data-dtype="String"/>
-        </div>
+  <div class="form-group">
+    <label>{{localize "COC.ui.heal"}}</label>
+    <div class="form-fields">
+      <input type="text" name="system.effects.heal.formula" value="{{system.effects.heal.formula}}" placeholder="{{localize 'COC.ui.formula'}}" data-dtype="String" />
     </div>
+  </div>
 {{/if}}
 
 {{#if system.properties.buff}}
-    <div class="form-group">
-        <label>{{ localize "COC.ui.buff" }}</label>
-        <div class="form-fields">
-            <input type="text" name="system.effects.buff.formula" value="{{system.effects.buff.formula}}" placeholder="{{localize "COC.ui.formula"}}" data-dtype="String"/>
-        </div>
+  <div class="form-group">
+    <label>{{localize "COC.ui.buff"}}</label>
+    <div class="form-fields">
+      <input type="text" name="system.effects.buff.formula" value="{{system.effects.buff.formula}}" placeholder="{{localize 'COC.ui.formula'}}" data-dtype="String" />
     </div>
+  </div>
 {{/if}}
 
 {{#if system.properties.temporary}}
-    <div class="form-group">
-        <label>{{ localize "COC.ui.duration" }}</label>
-        <div class="form-fields">
-            <input type="number" name="system.properties.duration.formula" value="{{system.properties.duration.formula}}" placeholder="{{localize "COC.ui.formula"}}" data-dtype="Number"/>
-        </div>
+  <div class="form-group">
+    <label>{{localize "COC.ui.duration"}}</label>
+    <div class="form-fields">
+      <input
+        type="number"
+        name="system.properties.duration.formula"
+        value="{{system.properties.duration.formula}}"
+        placeholder="{{localize 'COC.ui.formula'}}"
+        data-dtype="Number"
+      />
     </div>
-    <div class="form-group">
-        <label>{{ localize "COC.ui.units" }}</label>&nbsp;
-        <select name="system.properties.duration.units" data-type="String" style="width:100%">
-        {{#select system.properties.duration.units}}
-            <option value="">{{localize "COC.None"}}</option>
-            <option value="rounds">{{localize "COC.ui.rounds"}}</option>
-            <option value="minutes">{{localize "COC.ui.minutes"}}</option>
-            <option value="hours">{{localize "COC.ui.hours"}}</option>
-            <option value="days">{{localize "COC.ui.days"}}</option>
-        {{/select}}
+  </div>
+  <div class="form-group">
+    <label>{{localize "COC.ui.units"}}</label>&nbsp;
+
+    <select name="system.properties.duration.units" data-type="String" style="width:100%">
+      {{selectOptions config.DURATION selected=system.properties.duration.units localize=true blank="COC.None"}}
     </select>
-    </div>
+  </div>
 {{/if}}
