--- a/templates/items/parts/details/item-details.hbs
+++ b/templates/items/parts/details/item-details.hbs
@@ -3,12 +3,8 @@
     <label>Sous-catégorie</label>
     <div class="form-fields">
         <select name="system.subtype" data-type="String" style="width:100%">
-            {{#select system.subtype}}
-                {{#each config.itemCategories as | category id |}}
-                    <option value="{{id}}">{{localize category}}</option>
-                {{/each}}
-            {{/select}}
-        </select>
+            {{selectOptions config.itemCategories selected=system.subtype localize=true}}
+        </select>        
     </div>
 </div>
 
