--- a/templates/items/parts/details/path-details.hbs
+++ b/templates/items/parts/details/path-details.hbs
@@ -22,8 +22,9 @@
         </div>
     </li>
     {{#each system.capacities as |capacity id|}}
+    {{log ('capacity' capacity)}}
     <ol class="item-list">
-        <li class="item flexrow" data-item-id="{{capacity._id}}" data-item-type="capacity" data-key="{{capacity.data.key}}" draggable="true">
+        <li class="item flexrow" data-item-uuid="{{capacity.sourceId}}" data-item-id="{{capacity._id}}" data-item-type="capacity" data-key="{{capacity.data.key}}" draggable="true">
             <div class="item-name flexrow">
                 <div class="item-image" style="background-image: url('{{capacity.img}}')"></div>
                 <h4>{{capacity.name}}</h4>
