--- a/styles/coc.less
+++ b/styles/coc.less
@@ -9,6 +9,7 @@
 @import 'global/flex';
 @import 'global/table';
 @import 'global/chat';
+@import 'global/status';
 
 /* Styles limited to co sheets */
 .coc {
