Remplacement de title par data-tooltip

--- a/templates/actors/actor-sheet.hbs
+++ b/templates/actors/actor-sheet.hbs
@@ -8,7 +8,7 @@
                 <span class="charname">{{split actor.name ' ' 0}}</span>
             </div>
             <div class="portrait">
-                <img class="profile" src="{{actor.img}}" title="{{actor.name}}" data-edit="img"/>
+                <img class="profile" src="{{actor.img}}" data-tooltip="{{actor.name}}" data-edit="img"/>
             </div>
         </div>
         <div class="content flex3">
