--- a/templates/chat/dmg-roll-card.hbs
+++ b/templates/chat/dmg-roll-card.hbs
@@ -11,16 +11,16 @@
         <label for="dr" class="dr-checkbox">{{localize "COC.ui.dr.abbrev"}}</label>
         <input type="checkbox" id="dr" name="dr" class="dr-checkbox">            
         <a class="btn apply-dmg" data-apply="full">
-            <i class="fas fa-user-minus" title="{{localize "COC.ui.applyDamage"}}"></i>
+            <i class="fas fa-user-minus" data-tooltip="{{localize "COC.ui.applyDamage"}}"></i>
         </a>
         <a class="btn apply-dmg" data-apply="half">
-            <i class="fas fa-user-shield" title="{{localize "COC.ui.applyHalfDamage"}}"></i>
+            <i class="fas fa-user-shield" data-tooltip="{{localize "COC.ui.applyHalfDamage"}}"></i>
         </a>
         <a class="btn apply-dmg" data-apply="double">
-            <i class="fas fa-user-injured" title="{{localize "COC.ui.applyDoubleDamage"}}"></i>
+            <i class="fas fa-user-injured" data-tooltip="{{localize "COC.ui.applyDoubleDamage"}}"></i>
         </a>
         <a class="btn apply-dmg" data-apply="heal">
-            <i class="fas fa-user-plus" title="{{localize "COC.ui.applyHealing"}}"></i>
+            <i class="fas fa-user-plus" data-tooltip="{{localize "COC.ui.applyHealing"}}"></i>
         </a>
     </div>
 </div>
