--- a/templates/chat/healing-roll-card.hbs
+++ b/templates/chat/healing-roll-card.hbs
@@ -10,10 +10,10 @@
     {{#if showButtons}}
         <div class="flex1 right no-wrap">
             <a class="btn apply-dmg" data-apply="full">
-                <i class="fas fa-user-minus" title="{{localize "COC.ui.applyDamage"}}"></i>
+                <i class="fas fa-user-minus" data-tooltip="{{localize "COC.ui.applyDamage"}}"></i>
             </a>
             <a class="btn apply-dmg" data-apply="heal">
-                <i class="fas fa-user-plus" title="{{localize "COC.ui.applyHealing"}}"></i>
+                <i class="fas fa-user-plus" data-tooltip="{{localize "COC.ui.applyHealing"}}"></i>
             </a>
         </div>
     {{/if}}
