--- a/templates/items/item-sheet.hbs
+++ b/templates/items/item-sheet.hbs
@@ -1,6 +1,6 @@
 <form class="{{cssClass}}" autocomplete="off">
     <header class="sheet-header flexrow header-background no-wrap">
-        <img class="profile" src="{{item.img}}" title="{{item.name}}" data-edit="img">
+        <img class="profile" src="{{item.img}}" data-tooltip="{{item.name}}" data-edit="img">
         <div class="header-details flexrow">
             <h1 class="charname">
                 <input name="name" type="text" value="{{item.name}}" placeholder="Item Name"/>
