--- a/templates/actors/parts/capacities/actor-capacities.hbs
+++ b/templates/actors/parts/capacities/actor-capacities.hbs
@@ -11,7 +11,7 @@
                     <div class="item-detail">S</div>
                     {{#if @root.editable}}
                         <div class="item-controls-3">
-                            <a class="item-control item-create coc-compendium-pack" data-pack="capacities" data-open="0" title="Ajouter une capacité"><i class="fas fa-plus"></i>&nbsp; {{localize "COC.ui.add"}}</a>
+                            <a class="item-control item-create coc-compendium-pack" data-pack="capacities" data-open="0" data-tooltip="Ajouter une capacité"><i class="fas fa-plus"></i>&nbsp; {{localize "COC.ui.add"}}</a>
                         </div>
                     {{/if}}
                 </li>
@@ -27,9 +27,9 @@
                             <div class="item-detail">{{#if capacity.system.spell}}&#10033;{{/if}}</div>
                             {{#if @root.editable}}
                                 <div class="item-controls-3">
-                                    <a class="item-control item-to-chat" title='{{localize "COC.ui.sendItemToChat"}}'><i class="fas fa-comments"></i></a>
-                                    <a class="item-control item-edit" title='{{localize "COC.ui.editItem"}}'><i class="fas fa-edit"></i></a>
-                                    <a class="item-control item-delete" title='{{localize "COC.ui.deleteItem"}}'><i class="fas fa-trash"></i></a>
+                                    <a class="item-control item-to-chat" data-tooltip='{{localize "COC.ui.sendItemToChat"}}'><i class="fas fa-comments"></i></a>
+                                    <a class="item-control item-edit" data-tooltip='{{localize "COC.ui.editItem"}}'><i class="fas fa-edit"></i></a>
+                                    <a class="item-control item-delete" data-tooltip='{{localize "COC.ui.deleteItem"}}'><i class="fas fa-trash"></i></a>
                                 </div>
                             {{/if}}
                             <div class="item-summary" style="display: none">
