--- a/templates/actors/parts/capacities/actor-paths.hbs
+++ b/templates/actors/parts/capacities/actor-paths.hbs
@@ -14,16 +14,16 @@
             {{#each paths as |path id|}}
                 <div class="gridrow grid-6col-150 item" data-item-id="{{path._id}}" data-item-type="item" data-pack="paths">
                     <div class="gridcell left gridheader color-default no-border">
-                        <a class="item-edit ellipsis" style="width: 100%; text-align: left" title="{{path.name}}">{{path.name}}</a>&nbsp;
-                        <span class="path-controls item" data-item-id="{{path._id}}" style="padding-right:5px;"><a class="item-control item-delete" title='{{localize "COC.ui.deleteItem"}}'><i class="fas fa-times"></i></a></span>
+                        <a class="item-edit ellipsis" style="width: 100%; text-align: left" data-tooltip="{{path.name}}">{{path.name}}</a>&nbsp;
+                        <span class="path-controls item" data-item-id="{{path._id}}" style="padding-right:5px;"><a class="item-control item-delete" data-tooltip='{{localize "COC.ui.deleteItem"}}'><i class="fas fa-times"></i></a></span>
                     </div>
                     {{#each path.system.capacities as |capacity id|}}
                         <div class="gridcell gridcell-sm item capacity left color-default no-wrap" data-item-id="{{capacity._id}}" data-item-type="item" data-pack="capacities" data-path-id="{{path._id}}" data-uuid="{{capacity.sourceId}}">
                             {{#if capacity.data.checked}}
-                                <a class="capacity-control capacity-checked" title="{{capacity.name}}"><i class="fas fa-square"></i></a>&nbsp;
+                                <a class="capacity-control capacity-checked" data-tooltip="{{capacity.name}}"><i class="fas fa-square"></i></a>&nbsp;
                                 <a class="capacity-control item-edit ellipsis">{{capacity.name}}</a>
                             {{else}}
-                            <a class="capacity-control capacity-unchecked" title="{{capacity.name}}"><i class="far fa-square"></i>&nbsp;<a class="capacity-control item-edit ellipsis">{{capacity.name}}</a>
+                            <a class="capacity-control capacity-unchecked" data-tooltip="{{capacity.name}}"><i class="far fa-square"></i>&nbsp;<a class="capacity-control item-edit ellipsis">{{capacity.name}}</a>
                             {{/if}}
                         </div>
                     {{/each}}
@@ -64,16 +64,16 @@
 {{!--            {{#each paths as |path id|}}--}}
 {{!--                <div class="gridrow grid-6col-150 item" data-item-id="{{path._id}}" data-item-type="item" data-pack="coc.paths">--}}
 {{!--                    <div class="gridcell left gridheader no-border">--}}
-{{!--                        <a class="item-edit ellipsis" style="width: 100%; text-align: left" title="{{path.name}}">{{path.name}}</a>&nbsp;--}}
-{{!--                        <span class="path-controls item" data-item-id="{{path._id}}" style="padding-right:5px;"><a class="item-control item-delete" title='{{localize "COC.ui.deleteItem"}}'><i class="fas fa-times"></i></a></span>--}}
+{{!--                        <a class="item-edit ellipsis" style="width: 100%; text-align: left" data-tooltip="{{path.name}}">{{path.name}}</a>&nbsp;--}}
+{{!--                        <span class="path-controls item" data-item-id="{{path._id}}" style="padding-right:5px;"><a class="item-control item-delete" data-tooltip='{{localize "COC.ui.deleteItem"}}'><i class="fas fa-times"></i></a></span>--}}
 {{!--                    </div>--}}
 {{!--                    {{#each path.capacities as |capacity id|}}--}}
 {{!--                        <div class="gridcell gridcell-sm item capacity left" data-item-id="{{capacity._id}}" data-item-type="item" data-pack="coc.capacities" data-path-id="{{path._id}}">--}}
 {{!--                            {{#if capacity.checked}}--}}
-{{!--                                <a class="capacity-control capacity-checked" title="{{capacity.name}}"><i class="fas fa-square"></i></a>&nbsp;--}}
+{{!--                                <a class="capacity-control capacity-checked" data-tooltip="{{capacity.name}}"><i class="fas fa-square"></i></a>&nbsp;--}}
 {{!--                                <a class="capacity-control item-edit ellipsis">{{capacity.name}}</a>--}}
 {{!--                            {{else}}--}}
-{{!--                            <a class="capacity-control capacity-unchecked" title="{{capacity.name}}"><i class="far fa-square"></i>&nbsp;--}}
+{{!--                            <a class="capacity-control capacity-unchecked" data-tooltip="{{capacity.name}}"><i class="far fa-square"></i>&nbsp;--}}
 {{!--                                <a class="capacity-control item-edit ellipsis">{{capacity.name}}</a>--}}
 {{!--                            {{/if}}--}}
 {{!--                        </div>--}}
