--- a/templates/actors/parts/details/actor-details.hbs
+++ b/templates/actors/parts/details/actor-details.hbs
@@ -30,11 +30,11 @@
                 <div class="flex1 center cell-header">
                     <span class="field-label">Trait</span>
                 </div>
-                <div class="flex2 center cell drop-field coc-compendium-pack item" data-item-id="{{trait._id}}" data-pack="coc.traits" data-open="0" title="{{ localize 'COC.details.openTrait' }}">
+                <div class="flex2 center cell drop-field coc-compendium-pack item" data-item-id="{{trait._id}}" data-pack="coc.traits" data-open="0" data-tooltip="{{ localize 'COC.details.openTrait' }}">
                     {{#with trait}}
                         <div class="flex5 drop-item item-name item trait item-edit" data-item-id="{{_id}}" style="background-image: url('{{img}}'); background-size: 26px 26px; background-repeat: no-repeat">{{name}}</div>
                         <div class="item" data-item-id="{{_id}}" style="padding-right:5px;">
-                            <a class="item-control item-delete" title='{{localize "COC.ui.deleteItem"}}'><i class="fas fa-times"></i></a>
+                            <a class="item-control item-delete" data-tooltip='{{localize "COC.ui.deleteItem"}}'><i class="fas fa-times"></i></a>
                         </div>
                     {{/with}}
                 </div>
@@ -45,11 +45,11 @@
                 <div class="flex2 center cell-header">
                     <span class="field-label">{{ localize 'COC.details.profile' }}</span>
                 </div>
-                <div class="flex4 center cell drop-field coc-compendium-pack item" data-item-id="{{profile._id}}" data-pack="coc.profiles" data-open="0" title="{{ localize 'COC.details.openProfile' }}">
+                <div class="flex4 center cell drop-field coc-compendium-pack item" data-item-id="{{profile._id}}" data-pack="coc.profiles" data-open="0" data-tooltip="{{ localize 'COC.details.openProfile' }}">
                 {{#with profile}}
                     <div class="flex5 drop-item item-name item profile item-edit" data-item-id="{{_id}}" style="background-image: url('{{img}}'); background-size: 26px 26px; background-repeat: no-repeat">{{name}}</div>
                     <div class="item" data-item-id="{{_id}}" style="padding-right:5px;">
-                    <a class="item-control item-delete" title='{{localize "COC.ui.deleteItem"}}'><i class="fas fa-times"></i></a>
+                    <a class="item-control item-delete" data-tooltip='{{localize "COC.ui.deleteItem"}}'><i class="fas fa-times"></i></a>
                 </div>
                 {{/with}}
                 </div>
