--- a/templates/actors/parts/inventory/actor-inventory-item.hbs
+++ b/templates/actors/parts/inventory/actor-inventory-item.hbs
@@ -24,28 +24,28 @@
         </div>
         <div class="item-detail item-dmg" data-item-dmg="{{system.dmg}}">{{#if system.properties.weapon}}{{system.dmg}}{{/if}}</div>
     <div class="item-detail">
-        <a class="item-control inventory-qty {{#if system.properties.stackable}}unlocked{{else}}locked{{/if}}" title="Clic gauche pour ajouter, clic droit pour supprimer">{{system.qty}}</a>
+        <a class="item-control inventory-qty {{#if system.properties.stackable}}unlocked{{else}}locked{{/if}}" data-tooltip="Clic gauche pour ajouter, clic droit pour supprimer">{{system.qty}}</a>
     </div>
     <div class="item-detail">{{#if system.price}}{{system.price}}{{else}}N.C.{{/if}}</div>
     {{#if (or (equals owner.type "character") (equals owner.type "npc"))}}
     <div class="item-detail">
         {{#if system.properties.equipable}}
             {{#if system.worn}}
-                <a class="item-control inventory-equip" title="Déséquiper"><i class="fas fa-shield-alt"></i></a>
+                <a class="item-control inventory-equip" data-tooltip="Déséquiper"><i class="fas fa-shield-alt"></i></a>
             {{else}}
-                <a class="item-control inventory-equip" title="Équiper" style="color:lightgray;"><i class="fas fa-shield-alt"></i></a>
+                <a class="item-control inventory-equip" data-tooltip="Équiper" style="color:lightgray;"><i class="fas fa-shield-alt"></i></a>
             {{/if}}
         {{/if}}
         {{#if (and system.properties.consumable (isPositive system.qty))}}
-            <a class="item-control inventory-consume" title="Consommer"><i class="fas fa-drumstick-bite"></i></a>
+            <a class="item-control inventory-consume" data-tooltip="Consommer"><i class="fas fa-drumstick-bite"></i></a>
         {{/if}}
     </div>
     {{/if}}
     {{#if @root.editable}}
         <div class="item-controls-3">
-            <a class="item-control item-to-chat" title='{{localize "COC.ui.sendItemToChat"}}'><i class="fas fa-comments"></i></a>
-            <a class="item-control item-edit" title='{{localize "COC.ui.editItem"}}'><i class="fas fa-edit"></i></a>
-            <a class="item-control item-delete" title='{{localize "COC.ui.deleteItem"}}'><i class="fas fa-trash"></i></a>
+            <a class="item-control item-to-chat" data-tooltip='{{localize "COC.ui.sendItemToChat"}}'><i class="fas fa-comments"></i></a>
+            <a class="item-control item-edit" data-tooltip='{{localize "COC.ui.editItem"}}'><i class="fas fa-edit"></i></a>
+            <a class="item-control item-delete" data-tooltip='{{localize "COC.ui.deleteItem"}}'><i class="fas fa-trash"></i></a>
         </div>
     {{/if}}
 </li>
