--- a/templates/actors/parts/inventory/actor-inventory.hbs
+++ b/templates/actors/parts/inventory/actor-inventory.hbs
@@ -11,11 +11,11 @@
                     {{#if (isCategoryIn category.id "melee" "ranged" "spell")}}<div class="item-detail">Mod</div>{{else}}<div class="item-detail"></div>{{/if}}
                     {{#if (isCategoryIn category.id "melee" "ranged" "spell")}}<div class="item-detail">DM</div>{{else}}<div class="item-detail"></div>{{/if}}                    
                     <div class="item-detail">{{localize "COC.ui.qty"}}</div>
-                    <div class="item-detail"><i title="Prix" class="fas fa-coins" style="color:silver"></i></div>
+                    <div class="item-detail"><i data-tooltip="Prix" class="fas fa-coins" style="color:silver"></i></div>
                     {{#if (or (equals ../actor.type "character") (equals ../actor.type "npc"))}}<div class="item-detail">Action</div>{{/if}}
                     {{#if @root.editable}}
                         <div class="item-controls-3">
-                            <a class="item-control item-create coc-compendium-pack" data-pack="coc.items" data-open="0" title="Ajouter un objet"><i class="fas fa-plus"></i>&nbsp; {{localize "COC.ui.add"}}</a>
+                            <a class="item-control item-create coc-compendium-pack" data-pack="coc.items" data-open="0" data-tooltip="Ajouter un objet"><i class="fas fa-plus"></i>&nbsp; {{localize "COC.ui.add"}}</a>
                         </div>
                     {{/if}}
                 </li>
