--- a/templates/effects/effects.hbs
+++ b/templates/effects/effects.hbs
@@ -6,7 +6,7 @@
         {{#if isEffectsEditable}}
             <div class="item-detail">Action</div>
             <div class="item-controls">
-                <a class="item-control item-create effect-create" title="Ajouter un effet"><i class="fas fa-plus"></i>&nbsp; Aj.</a>
+                <a class="item-control item-create effect-create" data-tooltip="Ajouter un effet"><i class="fas fa-plus"></i>&nbsp; Aj.</a>
             </div>
         {{/if}}
     </li>
