--- a/templates/items/parts/details/path-details.hbs
+++ b/templates/items/parts/details/path-details.hbs
@@ -18,7 +18,7 @@
         <div class="item-detail"></div>
         <div class="item-detail item-rank">Rang</div>
         <div class="item-controls">
-            <a class="item-control item-create coc-compendium-pack" data-pack="coc.capacities" data-open="0" title="Ajouter une capacité"><i class="fas fa-plus"></i>&nbsp; Add</a>
+            <a class="item-control item-create coc-compendium-pack" data-pack="coc.capacities" data-open="0" data-tooltip="Ajouter une capacité"><i class="fas fa-plus"></i>&nbsp; Add</a>
         </div>
     </li>
     {{#each system.capacities as |capacity id|}}
@@ -32,8 +32,8 @@
             <div class="item-detail"></div>
             <div class="item-detail item-rank">{{add id 1}}</div>
             <div class="item-controls">
-                <a class="item-control item-edit" title='{{localize "COC.ui.editItem"}}'><i class="fas fa-edit"></i></a>
-                <a class="item-control item-delete" title='{{localize "COC.ui.deleteItem"}}'><i class="fas fa-trash"></i></a>
+                <a class="item-control item-edit" data-tooltip='{{localize "COC.ui.editItem"}}'><i class="fas fa-edit"></i></a>
+                <a class="item-control item-delete" data-tooltip='{{localize "COC.ui.deleteItem"}}'><i class="fas fa-trash"></i></a>
             </div>
         </li>
     </ol>
