--- a/templates/items/parts/details/profile-details.hbs
+++ b/templates/items/parts/details/profile-details.hbs
@@ -69,7 +69,7 @@
     <li class="inventory-header flexrow">
         <h3 class="item-name flexrow">Voies</h3>
         <div class="item-controls">
-            <a class="item-control item-create coc-compendium-pack" data-pack="coc.paths" data-open="0" title="Ajouter une voie"><i class="fas fa-plus"></i>&nbsp; Add</a>
+            <a class="item-control item-create coc-compendium-pack" data-pack="coc.paths" data-open="0" data-tooltip="Ajouter une voie"><i class="fas fa-plus"></i>&nbsp; Add</a>
         </div>
     </li>
 {{#each system.paths}}
@@ -80,8 +80,8 @@
                 <h4>{{name}}</h4>
             </div>
             <div class="item-controls">
-                <a class="item-control item-edit" title='{{localize "COC.ui.editItem"}}'><i class="fas fa-edit"></i></a>
-                <a class="item-control item-delete" title='{{localize "COC.ui.deleteItem"}}'><i class="fas fa-trash"></i></a>
+                <a class="item-control item-edit" data-tooltip='{{localize "COC.ui.editItem"}}'><i class="fas fa-edit"></i></a>
+                <a class="item-control item-delete" data-tooltip='{{localize "COC.ui.deleteItem"}}'><i class="fas fa-trash"></i></a>
             </div>
         </li>
     </ol>
